feat: 重新设计v0.7架构和原型，Skill作为参与者核心资产
**核心变更**：

**架构设计文档_v0.7** - 完全重写：
- 核心理念：优秀的人的经验以Skill方式用于项目各环节
- Skill是参与者的核心资产，不是平台提供的服务
- 参与者自由选择AI工具（Claude/Cursor/Codex）
- 平台只验收成果，不关心过程（不记录Token消耗）
- 新增Skill表和Skill使用记录表
- 新增CLI客户端设计和MCP集成
- 技术栈：Vue 3 + Fastify + TypeScript统一

**原型设计文档_v0.7** - 完全重写：
- 更新产品架构：Web + CLI + AI工具集成
- 新增CLI客户端交互示例
- 新增Skill导出和MCP集成示例
- 更新页面原型：Skill市场、个人档案
- 新增技术实现建议：MCP Protocol设计

**核心转变**：
- 之前：平台封装Skill → 参与者通过Skill调用AI
- 现在：参与者用自己的工具 → Skill是经验封装，可集成到AI工具
- 平台职责：从转发Skill调用 → 只验收成果

**文件**：
- architecture/架构设计文档_v0.7.md (重写，15KB)
- prototype/原型设计文档_v0.7.md (重写，19KB)

--- a/architecture/架构设计文档_v0.7.md
+++ b/architecture/架构设计文档_v0.7.md
@@ -1,205 +1,232 @@
 # AI Project Management Platform - 架构设计文档 v0.7
 
 > **版本说明**：基于v0.7需求设计的系统架构和技术选型  
-> **核心原则**：一人+AI开发优先，开源社区易上手  
-> **架构模式**：Web平台为核心，CLI作为后期可选增强
+> **核心原则**：把优秀的人的工作经验以Skill方式用于项目各环节  
+> **产品架构**：Web平台 + CLI客户端 + AI工具集成
 
 ---
 
-## 一、技术选型决策
+## 一、核心架构理念
 
-### 1.1 产品架构：Web + CLI双模式
+### 1.1 设计原则
+
+```
+核心原则：优秀的人的经验 → Skill → 用于项目各环节
+
+设计优先级：
+├─ 1. Skill是参与者的核心资产               → 经验封装，可复用
+├─ 2. 参与者自由选择AI工具                 → Claude/Cursor/Codex
+├─ 3. 平台只验收成果，不关心过程           → 只看交付件
+├─ 4. Skill可集成到AI工具                 → 直接在AI中使用
+└─ 5. 社区可复用优秀Skill                 → 经验沉淀和分享
+```
+
+### 1.2 整体架构图
 
 ```
 ┌─────────────────────────────────────────────────────────────────────────────┐
-│                          产品架构说明                                      │
+│                          整体架构                                         │
 │                                                                             │
-│  MVP阶段（v0.7-v1.0）：                                                  │
 │  ┌─────────────────────────────────────────────────────────────────────┐   │
-│  │                       Web平台 (核心)                                  │   │
-│  │  ├─ 发起人：项目发布、验收管理、结算                                │   │
-│  │  ├─ 参与者：任务大厅、任务执行、成本看板                           │   │
-│  │  └─ 通用：用户系统、Skill配置、个人档案                            │   │
+│  │                         Web平台层                                      │   │
+│  │  ├─ 发起人：项目发布、验收管理、结算                              │   │
+│  │  ├─ 参与者：任务大厅、个人档案、收益管理                          │   │
+│  │  └─ 社区：Skill市场、技能评分、经验分享                          │   │
 │  └─────────────────────────────────────────────────────────────────────┘   │
 │                                    │                                      │
 │                                    ▼                                      │
 │  ┌─────────────────────────────────────────────────────────────────────┐   │
-│  │                       CLI工具 (后期可选)                              │   │
-│  │  ├─ 本地Skill执行（直接调用Claude API）                            │   │
-│  │  ├─ Git深度集成（自动分析commit、PR）                              │   │
-│  │  └─ 开发者友好工具链                                               │   │
+│  │                         CLI客户端层                                    │   │
+│  │  ├─ 任务同步：从平台拉取任务到本地                                │   │
+│  │  ├─ 成果提交：提交GitHub PR到平台                                │   │
+│  │  ├─ 验收查看：查看发起人验收结果                                  │   │
+│  │  └─ Skill管理：分享/导入Skill                                     │   │
 │  └─────────────────────────────────────────────────────────────────────┘   │
-│                                                                             │
-│  架构决策：                                                              │
-│  ├─ MVP专注Web平台，确保核心体验                                         │
-│  ├─ CLI作为后期增强，不在MVP范围内                                        │
-│  └─ CLI优势：无需浏览器兼容，开发更高效                                   │
+│                                    │                                      │
+│                                    │                                      │
+│              ┌────────────────────┼────────────────────┐              │
+│              ▼                    ▼                    ▼              │
+│  ┌─────────────────┐  ┌─────────────────┐  ┌─────────────────┐   │
+│  │   Claude         │  │   Cursor        │  │   Codex/OpenCode│   │
+│  │   (MCP集成)     │  │   (MCP集成)    │  │   (MCP集成)    │   │
+│  └─────────────────┘  └─────────────────┘  └─────────────────┘   │
+│              │                    │                    │              │
+│              └────────────────────┼────────────────────┘              │
+│                                    ▼                                      │
+│  ┌─────────────────────────────────────────────────────────────────────┐   │
+│  │                         参与者工作流                                  │   │
+│  │                                                                     │   │
+│  │  1. 从CLI/平台拉取任务                                            │   │
+│  │  2. 在AI工具中加载Skill（自己的/社区的）                          │   │
+│  │  3. 用Skill完成项目（经验驱动）                                    │   │
+│  │  4. 提交GitHub PR                                                │   │
+│  │  5. 平台验收成果                                                  │   │
+│  │  6. 获得分成                                                       │   │
+│  │                                                                     │   │
+│  └─────────────────────────────────────────────────────────────────────┘   │
+│                                    │                                      │
+│                                    ▼                                      │
+│  ┌─────────────────────────────────────────────────────────────────────┐   │
+│  │                         数据持久层 (Prisma)                          │   │
+│  │  ├─ 用户/项目/任务/结算                                           │   │
+│  │  └─ Skill市场数据（分享/评分/复用）                               │   │
+│  └─────────────────────────────────────────────────────────────────────┘   │
 │                                                                             │
 └─────────────────────────────────────────────────────────────────────────────┘
 ```
 
-### 1.2 选型原则
+### 1.3 核心角色与职责
+
+| 角色 | 职责 | 核心资产 |
+|------|------|----------|
+| **发起人** | 发布项目、验收成果、支付分成 | 项目需求 |
+| **参与者** | 用Skill完成项目、交付成果 | Skill（经验封装） |
+| **平台** | 管理流程、验收标准、结算资金 | 流程和规则 |
+| **社区** | 分享Skill、复用经验、沉淀知识 | Skill市场 |
+
+---
+
+## 二、Skill设计
+
+### 2.1 Skill是什么
 
 ```
-选型优先级（一人+AI开发）：
-├─ 1. 学习成本最低      → 避免复杂框架
-├─ 2. 开发效率最高      → AI辅助代码生成
-├─ 3. 全栈统一语言      → TypeScript一统前后端
-├─ 4. 环境配置最简      → SQLite免安装
-└─ 5. 社区易上手      → 文档友好、入门简单
+Skill定义：
+├─ 是参与者的经验封装
+├─ 包含：Prompt模板、工作流程、质量标准
+├─ 可：复用、分享、集成到AI工具
+└─ 用于：项目各环节
+
+Skill不是：
+├─ 不是平台提供的服务
+├─ 不是调用API的封装
+└─ 不是限制参与者工具
 ```
 
-### 1.2 最终技术栈
+### 2.2 Skill核心组成
+
+```typescript
+interface Skill {
+  // 基础信息
+  id: string
+  name: string                    // Skill名称
+  description: string           // 功能描述
+  author: User                   // 作者
+  tags: string[]                // 标签：Python/React/API等
+  
+  // 核心组件
+  promptTemplates: PromptTemplate[]  // Prompt模板集合
+  workflow: Workflow              // 工作流程定义
+  qualityStandard: QualityStandard // 质量标准
+  
+  // 元数据
+  stats: {
+    usageCount: number          // 使用次数
+    successRate: number         // 验收通过率
+    avgQualityScore: number      // 平均质量分
+  }
+  
+  // 权限
+  visibility: 'private' | 'community' | 'public'
+  license: string               // 开源许可证
+}
+```
+
+### 2.3 Skill示例
+
+```
+示例：Python RESTful API 开发Skill
+
+Skill结构：
+├─ 名称：Python RESTful API 开发专家
+├─ 标签：[Python, FastAPI, RESTful, API Design]
+├─ Prompt模板：
+│  ├─ 基础模板：通用API开发Prompt
+│  ├─ 数据库集成：SQLAlchemy集成模板
+│  ├─ 认证模块：JWT认证模板
+│  └─ 测试模板：pytest模板
+├─ 工作流程：
+│  ├─ 步骤1：分析API需求
+│  ├─ 步骤2：设计数据模型
+│  ├─ 步骤3：编写API代码
+│  └─ 步骤4：编写测试用例
+└─ 质量标准：
+   ├─ PEP8规范
+   ├─ 单元测试覆盖率 > 80%
+   ├─ 错误处理完整
+   └─ 文档齐全
+```
+
+### 2.4 Skill与AI工具集成
+
+```
+集成方式：MCP (Model Context Protocol)
+
+参与者操作：
+1. 在Claude Desktop中安装Skill
+   └─ 直接加载Prompt模板
+
+2. 在Cursor中导入Skill
+   └─ 作为代码生成规则
+
+3. 在OpenCode中集成Skill
+   └─ 作为开发模板
+
+效果：
+参与者用习惯的工具
++ 加载优秀Skill
+= 高质量产出
+```
+
+---
+
+## 三、技术选型
+
+### 3.1 最终技术栈
 
 | 层级 | 技术选型 | 版本 | 选型理由 |
 |------|----------|------|----------|
-| **前端框架** | Vue 3 | 3.4+ | 学习成本低，AI生成代码质量高 |
-| **前端语言** | TypeScript | 5.0+ | 类型安全，AI辅助友好 |
-| **UI组件库** | Naive UI | 2.7+ | Vue生态、TypeScript友好、主题丰富 |
-| **状态管理** | Pinia | 2.0+ | Vue官方推荐，API简洁 |
-| **后端框架** | Fastify | 4.0+ | 高性能、低开销、TypeScript支持好 |
-| **后端语言** | TypeScript | 5.0+ | 与前端统一，降低认知负担 |
-| **ORM** | Prisma | 5.0+ | 类型自动生成、迁移简单、文档清晰 |
-| **数据库(开发)** | SQLite | 3.44+ | 单文件、免安装、秒启动 |
-| **数据库(生产)** | PostgreSQL | 15+ | 生产级、Prisma原生支持 |
-| **AI集成** | Direct SDK | 最新 | 无需LangChain，增加复杂度 |
-| **认证** | JWT | - | 简单、无状态 |
-| **部署** | Docker | 24+ | 一键部署、环境一致 |
-| **反向代理** | Nginx | 1.24+ | 稳定、配置简单 |
+| **前端框架** | Vue 3 | 3.4+ | 学习成本低 |
+| **前端语言** | TypeScript | 5.0+ | 类型安全 |
+| **UI组件库** | Naive UI | 2.7+ | Vue生态友好 |
+| **状态管理** | Pinia | 2.0+ | API简洁 |
+| **后端框架** | Fastify | 4.0+ | 高性能 |
+| **后端语言** | TypeScript | 5.0+ | 与前端统一 |
+| **ORM** | Prisma | 5.0+ | 类型安全 |
+| **数据库(开发)** | SQLite | 3.44+ | 免安装 |
+| **数据库(生产)** | PostgreSQL | 15+ | 生产级 |
+| **认证** | JWT | - | 简单无状态 |
+| **部署** | Docker | 24+ | 一键部署 |
+| **CLI工具** | Node.js + Commander.js | - | TypeScript统一 |
+| **AI集成** | MCP Protocol | - | AI工具集成标准 |
 
-### 1.3 技术栈对比
+### 3.2 技术栈优势
 
-#### 前端：Vue 3 vs React
+| 优势 | 说明 |
+|------|------|
+| **TypeScript统一** | 前后端+CLI都是TS，降低认知负担 |
+| **SQLite开发** | 免安装，秒启动，一人开发友好 |
+| **Vue 3** | 学习成本低，文档友好 |
+| **MCP集成** | 标准化AI工具集成 |
+| **CLI优先** | 对开发者友好，浏览器兼容问题少 |
 
-| 维度 | Vue 3 | React | 结论 |
-|------|-------|-------|------|
-| 学习曲线 | ⭐⭐ 平缓 | ⭐⭐⭐ 陡峭 | Vue更适合 |
-| AI生成代码 | ⭐⭐⭐ 良好 | ⭐⭐⭐⭐ 成熟 | 两者都好 |
-| 文档中文 | ⭐⭐⭐⭐ 官方中文 | ⭐⭐⭐ 社区翻译 | Vue更友好 |
-| **一人+AI** | ✅ 更适合 | ⚠️ 需要学习 | **Vue 3** |
+### 3.3 对比之前版本
 
-#### 后端：Node.js vs Python
-
-| 维度 | Node.js | Python | 结论 |
-|------|---------|--------|------|
-| 全栈统一 | ✅ TS统一 | ⚠️ 两种语言 | Node.js更优 |
-| AI SDK支持 | ⭐⭐⭐⭐⭐ 官方完善 | ⭐⭐⭐⭐ 良好 | Node.js更优 |
-| 学习成本 | ⭐⭐⭐⭐ | ⭐⭐⭐⭐⭐ 简单 | Python更简单 |
-| **一人+AI** | ✅ TS统一 | ⚠️ 需切换 | **Node.js** |
-
-#### 数据库：SQLite vs PostgreSQL
-
-| 维度 | SQLite | PostgreSQL | 结论 |
-|------|--------|------------|------|
-| 安装配置 | ⭐⭐⭐⭐⭐ 免安装 | ⭐⭐⭐ 需安装 | SQLite更优 |
-| 开发体验 | ⭐⭐⭐⭐⭐ 单文件 | ⭐⭐⭐ 需要服务 | SQLite更优 |
-| **一人+AI** | ✅ 开发首选 | ⚠️ 后期切换 | **SQLite开发** |
+| 维度 | v0.6 | v0.7 |
+|------|-------|-------|
+| **Skill定位** | 平台封装AI调用 | 参与者经验封装 |
+| **参与者工具** | 通过Skill调用AI | 自由选择AI工具 |
+| **平台职责** | 转发Skill调用 | 只验收成果 |
+| **AI集成** | Direct SDK | MCP Protocol |
+| **CLI作用** | 后期可选 | 本地对接工具 |
 
 ---
 
-## 二、系统架构
+## 四、数据模型设计
 
-### 2.1 整体架构图
+### 4.1 核心数据表
 
-```
-┌─────────────────────────────────────────────────────────────────────────────┐
-│                          系统整体架构                                       │
-│                                                                             │
-│  ┌─────────────────────────────────────────────────────────────────────┐   │
-│  │                     客户端层 (Browser)                               │   │
-│  │   ┌─────────────────────────────────────────────────────────────┐  │   │
-│  │   │                  Vue 3 SPA 应用                             │  │   │
-│  │   │  ├─ 页面路由 (Vue Router)                                 │  │   │
-│  │   │  ├─ 状态管理 (Pinia)                                      │  │   │
-│  │   │  ├─ HTTP请求 (Axios)                                       │  │   │
-│  │   │  └─ UI组件 (Naive UI)                                      │  │   │
-│  │   └─────────────────────────────────────────────────────────────┘  │   │
-│  └─────────────────────────────────────────────────────────────────────┘   │
-│                                    │                                      │
-│                                    ▼                                      │
-│  ┌─────────────────────────────────────────────────────────────────────┐   │
-│  │                      API网关层 (Nginx)                             │   │
-│  │   ├─ 静态文件服务                                                │   │
-│  │   ├─ 反向代理                                                    │   │
-│  │   ├─ SSL终结                                                     │   │
-│  │   └─ 负载均衡 (单实例时跳过)                                     │   │
-│  └─────────────────────────────────────────────────────────────────────┘   │
-│                                    │                                      │
-│                                    ▼                                      │
-│  ┌─────────────────────────────────────────────────────────────────────┐   │
-│  │                      应用服务层 (Fastify)                          │   │
-│  │   ┌─────────────────────────────────────────────────────────────┐  │   │
-│  │   │                    RESTful API                               │  │   │
-│  │   │  ├─ /api/auth     (认证模块)                              │  │   │
-│  │   │  ├─ /api/users   (用户模块)                              │  │   │
-│  │   │  ├─ /api/projects (项目模块)                              │  │   │
-│  │   │  ├─ /api/tasks   (任务模块)                              │  │   │
-│  │   │  ├─ /api/skills  (Skill模块)                             │  │   │
-│  │   │  ├─ /api/costs   (成本模块)                              │  │   │
-│  │   │  └─ /api/settlements (结算模块)                          │  │   │
-│  │   └─────────────────────────────────────────────────────────────┘  │   │
-│  └─────────────────────────────────────────────────────────────────────┘   │
-│                                    │                                      │
-│                                    ▼                                      │
-│  ┌─────────────────────────────────────────────────────────────────────┐   │
-│  │                      数据持久层 (Prisma ORM)                        │   │
-│  │   ├─ 开发环境：SQLite (prisma/dev.db)                           │   │
-│  │   └─ 生产环境：PostgreSQL (Docker)                              │   │
-│  └─────────────────────────────────────────────────────────────────────┘   │
-│                                    │                                      │
-│              ┌─────────────────────┼─────────────────────┐              │
-│              ▼                     ▼                     ▼              │
-│  ┌─────────────────┐   ┌─────────────────┐   ┌─────────────────┐   │
-│  │   Claude API      │   │   DeepSeek API   │   │   GitHub API    │   │
-│  └─────────────────┘   └─────────────────┘   └─────────────────┘   │
-│                                                                             │
-└─────────────────────────────────────────────────────────────────────────────┘
-```
-
-### 2.2 前后端分离架构
-
-```
-前端 (Vue 3 SPA)
-    │
-    │ HTTP REST API (JSON)
-    ▼
-
-后端 (Fastify REST API)
-    │
-    │ Prisma ORM
-    ▼
-
-数据库 (SQLite/PostgreSQL)
-```
-
-### 2.3 模块划分
-
-```
-src/
-├── api/                    # REST API 路由
-│   ├── auth/              # 认证模块
-│   ├── users/             # 用户模块
-│   ├── projects/          # 项目模块
-│   ├── tasks/             # 任务模块
-│   ├── skills/            # Skill模块
-│   ├── costs/             # 成本模块
-│   └── settlements/       # 结算模块
-│
-├── services/               # 业务逻辑层
-├── repositories/           # 数据访问层
-├── entities/              # 实体定义
-├── middlewares/          # 中间件
-├── utils/                 # 工具函数
-└── types/                 # 类型定义
-```
-
----
-
-## 三、数据模型设计
-
-### 3.1 核心数据表
-
-#### 3.1.1 用户表 (users)
+#### 4.1.1 用户表 (users)
 
 ```typescript
 model User {
@@ -213,19 +240,19 @@ model User {
   createdAt     DateTime  @default(now())
   updatedAt     DateTime  @updatedAt
   
+  skills        Skill[]   @relation("SkillAuthor")
+  usedSkills    SkillUsage[]
   projects      Project[]  @relation("ProjectInitiator")
   tasks         Task[]
-  profiles      Profile[]
   settlements   Settlement[]
-  costs         Cost[]
   
   @@map("users")
 }
 
 enum Role {
-  INITIATOR
-  PARTICIPANT
-  ADMIN
+  INITIATOR    // 发起人
+  PARTICIPANT  // 参与者
+  ADMIN        // 管理员
 }
 
 enum UserStatus {
@@ -234,7 +261,78 @@ enum UserStatus {
 }
 ```
 
-#### 3.1.2 项目表 (projects)
+#### 4.1.2 Skill表 (skills)
+
+```typescript
+model Skill {
+  id            String    @id @default(uuid())
+  name          String
+  description   String
+  tags          String[]
+  
+  // Prompt模板
+  promptTemplates Json    // 序列化存储
+  
+  // 工作流程定义
+  workflow       Json
+  
+  // 质量标准
+  qualityStandard Json
+  
+  // 元数据
+  visibility     Visibility @default(COMMUNITY)
+  license        String     @default("MIT")
+  
+  authorId       String
+  author         User       @relation("SkillAuthor", fields: [authorId], references: [id])
+  
+  // 统计
+  stats {
+    usageCount:     Int       @default(0)
+    successRate:    Float     @default(0)
+    avgQualityScore: Float   @default(0)
+  }
+  
+  createdAt     DateTime  @default(now())
+  updatedAt     DateTime  @updatedAt
+  
+  usages        SkillUsage[]
+  
+  @@map("skills")
+}
+
+enum Visibility {
+  PRIVATE     // 仅自己可见
+  COMMUNITY  // 社区可见
+  PUBLIC     // 公开
+}
+```
+
+#### 4.1.3 Skill使用记录表 (skill_usages)
+
+```typescript
+model SkillUsage {
+  id            String    @id @default(uuid())
+  skillId       String
+  skill         Skill     @relation(fields: [skillId], references: [id])
+  
+  userId        String
+  user          User      @relation(fields: [userId], references: [id])
+  
+  taskId        String?
+  task          Task?     @relation(fields: [taskId], references: [id])
+  
+  // 使用情况
+  qualityScore   Float?    // 本次质量评分
+  wasApproved    Boolean   @default(false)
+  
+  usedAt        DateTime  @default(now())
+  
+  @@map("skill_usages")
+}
+```
+
+#### 4.1.4 项目表 (projects)
 
 ```typescript
 model Project {
@@ -247,7 +345,6 @@ model Project {
   
   totalBudget   Float
   costPerTask   Float?
-  preferredModels String[]
   
   initiatorId   String
   initiator     User      @relation("ProjectInitiator", fields: [initiatorId], references: [id])
@@ -256,12 +353,15 @@ model Project {
   tasks         Task[]
   settlements   Settlement[]
   
+  createdAt     DateTime  @default(now())
+  updatedAt     DateTime  @updatedAt
+  
   @@map("projects")
 }
 
 enum ProjectMode {
-  COMMUNITY
-  ENTERPRISE
+  COMMUNITY   // 现金
+  ENTERPRISE  // 积分
 }
 
 enum Visibility {
@@ -277,35 +377,7 @@ enum ProjectStatus {
 }
 ```
 
-#### 3.1.3 环节表 (milestones)
-
-```typescript
-model Milestone {
-  id            String    @id @default(uuid())
-  name          String
-  description   String
-  budget       Float
-  order         Int
-  requiredSkills String[]
-  minSkillLevel SkillLevel @default(L1)
-  
-  projectId     String
-  project       Project    @relation(fields: [projectId], references: [id], onDelete: Cascade)
-  
-  tasks         Task[]
-  
-  @@map("milestones")
-}
-
-enum SkillLevel {
-  L1
-  L2
-  L3
-  L4
-}
-```
-
-#### 3.1.4 任务表 (tasks)
+#### 4.1.5 任务表 (tasks)
 
 ```typescript
 model Task {
@@ -318,74 +390,55 @@ model Task {
   assigneeId    String
   assignee      User       @relation(fields: [assigneeId], references: [id])
   
-  skillConfig   Json
-  modelUsed     String
-  promptTemplate String
+  // 参与者使用的Skill（记录）
+  usedSkills    String[]  // Skill ID列表
   
-  totalTokens   Int       @default(0)
-  totalCost     Float     @default(0)
-  contribution  Float?
+  // 交付信息
+  deliverableUrl String?   // GitHub PR/仓库URL
+  qualityScore  Float?    // 验收评分
   
-  startedAt    DateTime?
-  submittedAt   DateTime?
-  approvedAt   DateTime?
+  // 时间戳
+  startedAt      DateTime?
+  submittedAt    DateTime?
+  approvedAt     DateTime?
   
-  deliverables  Deliverable[]
-  costs         Cost[]
+  createdAt     DateTime  @default(now())
+  updatedAt     DateTime  @updatedAt
   
   @@map("tasks")
 }
 
 enum TaskStatus {
-  PENDING
-  IN_PROGRESS
-  SUBMITTED
-  APPROVED
-  REJECTED
-  CANCELLED
+  PENDING      // 待认领
+  IN_PROGRESS  // 进行中
+  SUBMITTED    // 已提交
+  APPROVED     // 已通过验收
+  REJECTED     // 验收被拒
+  CANCELLED     // 已取消
 }
 ```
 
-#### 3.1.5 成本表 (costs)
-
-```typescript
-model Cost {
-  id            String    @id @default(uuid())
-  userId        String
-  user          User      @relation(fields: [userId], references: [id])
-  taskId        String?
-  task          Task?     @relation(fields: [taskId], references: [id])
-  
-  provider      String
-  model         String
-  inputTokens   Int
-  outputTokens  Int
-  totalTokens   Int
-  cost          Float
-  
-  calledAt      DateTime  @default(now())
-  
-  @@map("costs")
-}
-```
-
-#### 3.1.6 结算表 (settlements)
+#### 4.1.6 结算表 (settlements)
 
 ```typescript
 model Settlement {
   id            String    @id @default(uuid())
   projectId     String
   project       Project    @relation(fields: [projectId], references: [id])
+  
   userId        String
   user          User       @relation(fields: [userId], references: [id])
+  
   taskId        String?
   task          Task?      @relation(fields: [taskId], references: [id])
   
   amount        Float
   currency      String    @default("CNY")
+  
   status        SettlementStatus @default(PENDING)
   
   settledAt     DateTime?
+  createdAt     DateTime  @default(now())
   
   @@map("settlements")
 }
@@ -397,319 +450,236 @@ enum SettlementStatus {
 }
 ```
 
-#### 3.1.7 用户档案表 (profiles)
-
-```typescript
-model Profile {
-  id            String    @id @default(uuid())
-  userId        String
-  user          User      @relation(fields: [userId], references: [id], onDelete: Cascade)
-  
-  skills        String[]
-  expertise     String[]
-  tools         String[]
-  
-  skillLevel    SkillLevel @default(L1)
-  systemScore   Float     @default(0)
-  
-  onlineStatus  OnlineStatus @default(OFFLINE)
-  lastActiveAt  DateTime?
-  
-  @@unique([userId])
-  @@map("profiles")
-}
-
-enum OnlineStatus {
-  ONLINE
-  BUSY
-  OFFLINE
-}
-```
-
 ---
 
-## 四、API设计
+## 五、API设计
 
-### 4.1 API端点清单
+### 5.1 API端点清单
 
-#### 认证模块 (/api/v1/auth)
-
-| 方法 | 端点 | 描述 |
-|------|------|------|
-| POST | /api/v1/auth/register | 注册 |
-| POST | /api/v1/auth/login | 登录 |
-| POST | /api/v1/auth/logout | 登出 |
-| POST | /api/v1/auth/refresh | 刷新Token |
-| GET | /api/v1/auth/me | 获取当前用户 |
-
-#### 项目模块 (/api/v1/projects)
+#### Skill模块 (/api/v1/skills)
 
 | 方法 | 端点 | 描述 | 权限 |
 |------|------|------|------|
-| POST | /api/v1/projects | 创建项目 | 登录用户 |
-| GET | /api/v1/projects | 获取项目列表 | 公开 |
-| GET | /api/v1/projects/:id | 获取项目详情 | 公开 |
-| PUT | /api/v1/projects/:id | 更新项目 | 发起人 |
-| PUT | /api/v1/projects/:id/status | 更新状态 | 发起人 |
+| POST | /api/v1/skills | 创建Skill | 登录用户 |
+| GET | /api/v1/skills | 获取Skill列表 | 公开 |
+| GET | /api/v1/skills/:id | 获取Skill详情 | 公开 |
+| PUT | /api/v1/skills/:id | 更新Skill | 作者 |
+| DELETE | /api/v1/skills/:id | 删除Skill | 作者 |
+| POST | /api/v1/skills/:id/publish | 发布到社区 | 作者 |
+| POST | /api/v1/skills/:id/import | 导入Skill | 登录用户 |
+| GET | /api/v1/skills/:id/export | 导出Skill (MCP格式) | 公开 |
 
 #### 任务模块 (/api/v1/tasks)
 
 | 方法 | 端点 | 描述 | 权限 |
 |------|------|------|------|
-| GET | /api/v1/tasks | 获取任务大厅 | 登录用户 |
-| GET | /api/v1/tasks/my | 获取我的任务 | 登录用户 |
+| GET | /api/v1/tasks | 任务大厅 | 登录用户 |
+| GET | /api/v1/tasks/my | 我的任务 | 登录用户 |
 | POST | /api/v1/tasks/:id/claim | 认领任务 | 登录用户 |
+| GET | /api/v1/tasks/:id | 任务详情 | 参与者 |
 | POST | /api/v1/tasks/:id/submit | 提交成果 | 参与者 |
-| POST | /api/v1/tasks/:id/review | 发起人验收 | 发起人 |
+| POST | /api/v1/tasks/:id/review | 验收任务 | 发起人 |
 
-#### 结算模块 (/api/v1/settlements)
-
-| 方法 | 端点 | 描述 |
-|------|------|------|
-| GET | /api/v1/settlements | 获取结算记录 |
-| GET | /api/v1/settlements/summary | 获取结算统计 |
-
-#### 成本模块 (/api/v1/costs)
+#### CLI专用 (/api/v1/cli)
 
 | 方法 | 端点 | 描述 |
 |------|------|------|
-| GET | /api/v1/costs | 获取成本记录 |
-| GET | /api/v1/costs/summary | 获取成本统计 |
+| GET | /api/v1/cli/sync | 同步任务到本地 |
+| POST | /api/v1/cli/notify | 接收GitHub Webhook |
+| GET | /api/v1/cli/export-skill | 导出Skill为MCP格式 |
 
-### 4.2 API响应格式
+---
 
-#### 成功响应
+## 六、CLI客户端设计
 
-```json
-{
-  "success": true,
-  "data": { ... },
-  "meta": { "page": 1, "limit": 20, "total": 100 }
-}
+### 6.1 CLI功能
+
+```bash
+# 任务管理
+aipm task list              # 列出可认领任务
+aipm task claim <id>      # 认领任务
+aipm task pull             # 同步任务到本地
+aipm task submit           # 提交成果
+
+# Skill管理
+aipm skill list            # 列出我的Skill
+aipm skill create          # 创建Skill
+aipm skill export <id>     # 导出为MCP格式
+aipm skill import <file>    # 导入Skill
+
+# 项目管理
+aipm project list          # 列出我的项目
+aipm project info <id>     # 项目详情
+
+# 验收查询
+aipm review status         # 查看验收状态
+aipm review result         # 查看验收结果
 ```
 
-#### 错误响应
+### 6.2 CLI与平台交互
 
-```json
+```
+CLI工作流：
+
+1. 登录认证
+   aipm login → 获取JWT Token
+
+2. 同步任务
+   aipm task pull → 从平台拉取任务详情
+
+3. 本地开发
+   # 用Claude/Cursor/Codex开发
+   # 加载Skill（自己的/社区的）
+
+4. 提交成果
+   aipm task submit --pr=<GitHub PR URL>
+   → 通知平台：任务已提交
+
+5. 验收结果
+   aipm review result
+   → 查看发起人验收结果
+```
+
+### 6.3 Skill导出为MCP格式
+
+```
+Skill导出结构：
 {
-  "success": false,
-  "error": {
-    "code": "VALIDATION_ERROR",
-    "message": "参数验证失败",
-    "details": [{ "field": "email", "message": "邮箱格式不正确" }]
-  }
+  "name": "skill-name",
+  "description": "...",
+  "prompts": [
+    {
+      "name": "prompt-name",
+      "template": "You are an expert in..."
+    }
+  ],
+  "workflow": [
+    {"step": 1, "description": "..."}
+  ],
+  "qualityStandard": {...}
 }
+
+在Claude Desktop中使用：
+1. 导出为JSON
+2. 复制到Claude的MCP配置目录
+3. 自动加载到上下文中
 ```
 
 ---
 
-## 五、部署架构
+## 七、部署架构
 
-### 5.1 开发环境
-
-```
-本地开发环境：
-├─ 前端：localhost:3000
-├─ 后端：localhost:3001
-└─ 数据库：SQLite文件 (./prisma/dev.db)
-```
-
-### 5.2 生产环境
+### 7.1 开发环境
 
 ```
-生产环境架构：
+本地开发：
+├─ 前端：Vue 3 (localhost:3000)
+├─ 后端：Fastify (localhost:3001)
+└─ 数据库：SQLite文件
+```
+
+### 7.2 生产环境
+
+```
+生产部署：
 ┌─────────────────────────────────────────────────────────────┐
-│                      Nginx (反向代理)                        │
-│   端口: 80 (HTTP) / 443 (HTTPS)                           │
-└─────────────────────────────────────────────────────────────┘
-                            │
-                            ▼
-┌─────────────────────────────────────────────────────────────┐
-│                   Docker Compose                            │
+│                   Docker Compose                              │
 │   ├─ api (Fastify):3001                                   │
-│   ├─ db (PostgreSQL):5432                                  │
-│   └─ redis (可选):6379                                     │
+│   ├─ web (Vue Build):80                                  │
+│   ├─ db (PostgreSQL):5432                                │
+│   └─ redis (可选):6379                                    │
 └─────────────────────────────────────────────────────────────┘
-```
-
-### 5.3 Docker配置
-
-#### docker-compose.yml
-
-```yaml
-version: '3.8'
-
-services:
-  api:
-    build: ./api
-    ports:
-      - "3001:3001"
-    environment:
-      - NODE_ENV=production
-      - DATABASE_URL=postgresql://user:pass@db:5432/app
-    depends_on:
-      - db
-
-  db:
-    image: postgres:15-alpine
-    environment:
-      - POSTGRES_USER=user
-      - POSTGRES_PASSWORD=pass
-      - POSTGRES_DB=app
-    volumes:
-      - postgres_data:/var/lib/postgresql/data
-
-volumes:
-  postgres_data:
 ```
 
 ---
 
-## 六、开发规范
+## 八、开发计划
 
-### 6.1 项目结构
+### 8.1 MVP阶段（核心功能）
+
+| 阶段 | 功能 | 时间 |
+|------|------|------|
+| **Phase 1** | 环境搭建 + 用户系统 | 1周 |
+| **Phase 2** | 项目发布 + 任务大厅 | 1周 |
+| **Phase 3** | 任务认领 + 成果提交 | 1周 |
+| **Phase 4** | 发起人验收 + 结算 | 1周 |
+| **Phase 5** | CLI客户端 | 1周 |
+
+### 8.2 MVP功能清单
+
+```
+MVP功能（P0必须）：
+
+用户系统：
+├─ 注册/登录
+├─ 个人档案
+└─ Skill管理
+
+项目管理：
+├─ 发布项目
+├─ 项目列表
+└─ 项目详情
+
+任务系统：
+├─ 任务大厅
+├─ 任务认领
+├─ 成果提交
+└─ 发起人验收
+
+结算系统：
+├─ 验收后结算
+└─ 分成计算
+
+CLI客户端：
+├─ 任务同步
+├─ 成果提交
+└─ Skill导入/导出
+
+P1可选：
+├─ Skill市场
+├─ Skill评分
+└─ MCP集成
+```
+
+---
+
+## 九、目录结构
 
 ```
 ai-project-management/
 ├── api/                    # 后端源码
 │   ├── src/
-│   │   ├── entities/     # 实体定义
+│   │   ├── entities/     # 数据实体
 │   │   ├── repositories/ # 数据访问
-│   │   ├── services/     # 业务逻辑
-│   │   ├── routes/       # 路由定义
-│   │   ├── middlewares/  # 中间件
-│   │   └── index.ts      # 入口文件
+│   │   ├── services/    # 业务逻辑
+│   │   ├── routes/      # 路由
+│   │   ├── middlewares/ # 中间件
+│   │   └── utils/       # 工具
+│   ├── prisma/          # ORM配置
 │   └── package.json
 │
 ├── web/                    # 前端源码
 │   ├── src/
-│   │   ├── views/        # 页面组件
-│   │   ├── components/   # 通用组件
-│   │   ├── stores/       # Pinia Store
-│   │   └── main.ts       # 入口文件
+│   │   ├── views/       # 页面
+│   │   ├── components/  # 组件
+│   │   ├── stores/      # Pinia
+│   │   └── utils/       # 工具
 │   └── package.json
 │
-└── docker-compose.yml
-```
-
-### 6.2 Git规范
-
-```
-分支策略：
-├─ main          # 主分支 (生产)
-├─ develop       # 开发分支
-└─ feature/*     # 功能分支
-
-提交规范：
-├─ feat: 新功能
-├─ fix: Bug修复
-├─ docs: 文档更新
-└─ chore: 构建/工具
-```
-
----
-
-## 七、开发计划
-
-### 7.1 开发阶段
-
-| 阶段 | 内容 | 时间 |
-|------|------|------|
-| Phase 1 | 环境搭建 + 基础框架 | 1周 |
-| Phase 2 | 核心功能开发 | 2-3周 |
-| Phase 3 | 测试 + 修复 | 1周 |
-| Phase 4 | 部署 + 上线 | 1周 |
-
-### 7.2 功能优先级
-
-```
-MVP功能优先级：
-
-P0 (必须)：
-├─ 用户注册/登录
-├─ 发起项目
-├─ 任务大厅
-├─ 任务认领
-├─ Skill调用AI
-├─ 人工审核
-├─ 发起人验收
-└─ 结算功能
-
-P1 (应该)：
-├─ 成本监控
-├─ 质量评分
-├─ 积分制
-└─ 备份机制
-
-P2 (可以有)：
-├─ 项目加密
-├─ 实时通知
-└─ 数据分析
-```
-
-### 7.3 CLI工具设计（后期可选）
-
-```
-CLI工具设计（v1.0+可选）：
-
-功能规划：
-├─ 命令行操作
-│  ├─ aipm init          # 初始化项目
-│  ├─ aipm task list    # 查看任务列表
-│  ├─ aipm task claim   # 认领任务
-│  ├─ aipm skill run    # 执行Skill
-│  └─ aipm git sync    # Git同步
+├── cli/                     # CLI客户端 ⭐
+│   ├── src/
+│   │   ├── commands/    # 命令实现
+│   │   ├── services/    # 服务层
+│   │   └── utils/       # 工具
+│   └── package.json
 │
-├─ 本地Skill执行
-│  ├─ 直接调用Claude API
-│  ├─ 无需浏览器，纯本地执行
-│  └─ 输出到本地文件
-│
-└─ Git深度集成
-    ├─ 自动分析commit记录
-    ├─ 验证代码贡献
-    └─ 同步到平台
-
-CLI架构设计：
-┌─────────────────────────────────────────────────────────────────────────────┐
-│                          CLI工具架构                                        │
-│                                                                             │
-│  ┌─────────────────────────────────────────────────────────────────────┐   │
-│  │                       CLI入口 (commander.js)                         │   │
-│  │   ├─ 命令解析                                                      │   │
-│  │   ├─ 参数处理                                                      │   │
-│  │   └─ 路由到对应模块                                                │   │
-│  └─────────────────────────────────────────────────────────────────────┘   │
-│                                    │                                      │
-│                                    ▼                                      │
-│  ┌─────────────────────────────────────────────────────────────────────┐   │
-│  │                       Core模块                                        │   │
-│  │   ├─ ConfigManager     # 配置管理                                    │   │
-│  │   ├─ APIClient       # API调用                                      │   │
-│  │   └─ GitAnalyzer     # Git分析                                      │   │
-│  └─────────────────────────────────────────────────────────────────────┘   │
-│                                    │                                      │
-│              ┌─────────────────────┼─────────────────────┐              │
-│              ▼                     ▼                     ▼              │
-│  ┌─────────────────┐   ┌─────────────────┐   ┌─────────────────┐   │
-│  │ Claude SDK       │   │ Git Command     │   │ Local File      │   │
-│  └─────────────────┘   └─────────────────┘   └─────────────────┘   │
-│                                                                             │
-└─────────────────────────────────────────────────────────────────────────────┘
-
-CLI优势：
-├─ 无需处理浏览器兼容性问题
-├─ 开发效率更高（一人+AI友好）
-├─ 适合技术人员使用
-├─ 可离线工作
-└─ 资源占用更低
-
-注意：CLI不替代Web平台，而是作为增强工具
+├── docker-compose.yml
+├── README.md
+└── IMPLEMENTATION_PLAN.md
 ```
 
 ---
 
 **文档版本**: v0.7
 **更新日期**: 2026-02-18
-**核心原则**：一人+AI开发优先，开源社区易上手
-**架构模式**：Web平台为核心，CLI后期可选增强
+**核心原则**：优秀的人的经验以Skill方式用于项目各环节
