--- a/requirements/产品需求规格说明书_v0.7.md
+++ b/requirements/产品需求规格说明书_v0.7.md
@@ -1,6 +1,7 @@
 # AI Project Management Platform - 需求规格说明书 v0.7
 
-> **版本说明**：基于v0.6，细化执行流程，精简场景，增加反面案例
+> **版本说明**：基于v0.7需求设计的系统架构和技术选型  
+> **核心原则**：优秀的人的经验以Skill方式用于项目各环节
 
 ---
 
@@ -8,388 +9,168 @@
 
 ### 1.1 产品愿景
 
-> "用更有性价比的模型，更优秀的Skill，达成项目要求——这是未来人机协作完成项目的方式"
+> "优秀的人的经验，以Skill方式，用于项目各环节——这是未来人机协作完成项目的方式"
 
 ### 1.2 核心理念
 
 ```
 ┌─────────────────────────────────────────────────────────────────────────────┐
-│                     人机协作完成项目的核心逻辑                              │
+│                     人机协作完成项目的核心逻辑                          │
 │                                                                             │
 │     项目要求                                                                  │
 │         │                                                                     │
 │         ▼                                                                     │
 │  ┌─────────────────────────────────────────────────────────────────────┐   │
-│  │  步骤1：分析任务复杂度                                               │   │
-│  │       - 代码量多少？                                                │   │
-│  │       - 技术难度？                                                  │   │
-│  │       - 质量要求？                                                  │   │
+│  │  步骤1：发起人发布项目                                     │   │
+│  │       - 拆解任务                                               │   │
+│  │       - 定义验收标准                                           │   │
+│  │       - 设置预算                                               │   │
 │  └─────────────────────────────────────────────────────────────────────┘   │
 │         │                                                                     │
 │         ▼                                                                     │
 │  ┌─────────────────────────────────────────────────────────────────────┐   │
-│  │  步骤2：选择性价比方案                                               │   │
-│  │       - 简单任务 → 低价模型 (DeepSeek/Qwen)                        │   │
-│  │       - 复杂任务 → 高端模型 (Claude/GPT-4)                         │   │
-│  │       - 关键是：达成要求，不浪费成本                                  │   │
+│  │  步骤2：参与者认领任务                                       │   │
+│  │       - 查看任务要求                                           │   │
+│  │       - 评估验收标准                                           │   │
+│  │       - 确认交付物                                             │   │
 │  └─────────────────────────────────────────────────────────────────────┘   │
 │         │                                                                     │
 │         ▼                                                                     │
 │  ┌─────────────────────────────────────────────────────────────────────┐   │
-│  │  步骤3：用优秀Skill执行                                             │   │
-│  │       - 优秀Skill让普通模型也能产出高质量成果                         │   │
-│  │       - Prompt优化、Workflow设计、领域知识注入                        │   │
-│  │       - 人来审核/优化，AI来执行/迭代                                  │   │
+│  │  步骤3：用Skill完成交付                                       │   │
+│  │       - 参与者用自己的工具（Claude/Cursor等）                 │   │
+│  │       - 加载Skill（自己的/社区的）                            │   │
+│  │       - 按Skill的经验和质量标准完成交付                        │   │
+│  │       - 提交GitHub PR                                         │   │
 │  └─────────────────────────────────────────────────────────────────────┘   │
 │         │                                                                     │
 │         ▼                                                                     │
 │  ┌─────────────────────────────────────────────────────────────────────┐   │
-│  │  步骤4：质量控制与验收                                               │   │
-│  │       - 人工审核AI输出                                               │   │
-│  │       - 发现问题→迭代优化                                           │   │
-│  │       - 发起人验收通过 → 结算                                      │   │
+│  │  步骤4：发起人验收成果                                         │   │
+│  │       - 检查交付物是否符合验收标准                               │   │
+│  │       - 确认质量                                               │   │
+│  │       - 通过 → 结算                                            │   │
 │  └─────────────────────────────────────────────────────────────────────┘   │
 │                                                                             │
 └─────────────────────────────────────────────────────────────────────────────┘
 ```
 
-### 1.3 两种使用方式
+### 1.3 核心原则
+
+```
+产品核心原则：
+├─ 1. Skill是参与者的核心资产              → 经验封装，可复用
+├─ 2. 参与者自由选择AI工具               → Claude/Cursor/Codex
+├─ 3. 平台只验收成果，不关心过程         → 不看Token消耗
+├─ 4. 发起人只看验收标准是否达标         → 不管用什么模型
+├─ 5. Skill可集成到AI工具                → MCP Protocol
+└─ 6. 社区可复用优秀Skill               → 经验沉淀和分享
+```
+
+### 1.4 两种使用方式
 
 | 维度 | 社区模式 | 企业模式 |
 |------|---------|---------|
 | **发起** | 任何人可发起 | 内部成员可发起 |
 | **参与** | 开放参与 | 内部成员参与 |
 | **可见性** | 公开项目 | 私有项目 |
-| **AI使用** | Skill调用云端API | Skill调用云端API |
 | **收益** | 现金分成 | 积分统计 |
-| **核心优势** | 性价比优先 | 成本可控 |
 
 ---
 
-## 二、OpenClaw Skill 设计
+## 二、Skill设计
 
-### 2.1 Skill 定位
-
-```
-┌─────────────────────────────────────────────────────────────────────────────┐
-│                          Skill 在系统中的位置                              │
-│                                                                             │
-│  参与者                                                                  │
-│     │                                                                     │
-│     ▼                                                                     │
-│  OpenClaw Skill ── 选对模型 + 用好Prompt ── 调用云端AI                 │
-│     │                        │                                            │
-│     │                        ▼                                            │
-│     │               Claude / GPT-4 / DeepSeek / Qwen                     │
-│     │                        │                                            │
-│     │                        ▼                                            │
-│     │              优秀Skill让普通模型产出高质量成果                       │
-│     │                                                                     │
-│     ▼                                                                     │
-│  完成任务 ── 人工审核 ── 提交贡献 ── 获得分成                           │
-│                                                                             │
-└─────────────────────────────────────────────────────────────────────────────┘
-```
-
-### 2.2 Skill 核心价值
-
-**Skill的本质**：不是调用API，而是把经验/方法论固化
-
-| Skill价值 | 说明 |
-|----------|------|
-| **Prompt优化** | 好的Prompt让模型输出质量翻倍 |
-| **任务拆解** | 把复杂任务拆解成AI能handle的子任务 |
-| **领域注入** | 把业务逻辑/行业知识融入上下文 |
-| **质量控制** | 验证、迭代、纠错机制 |
-| **模板沉淀** | 可复用、可迭代、有累积价值 |
-
-### 2.3 Skill 功能
-
-**Skill名称**：AI Project Worker
-
-**核心功能**：
-| 功能 | 说明 | 价值 |
-|------|------|------|
-| **模型选择** | 根据任务复杂度选择性价比模型 | 不花冤枉钱 |
-| **Prompt模板** | 内置优化后的Prompt模板 | 提升输出质量 |
-| **任务拆解** | 自动拆解复杂任务 | 降低执行难度 |
-| **执行引擎** | 调用AI并返回结果 | 自动化执行 |
-| **质量审核** | 辅助检查输出质量 | 保障成果 |
-| **成本追踪** | 实时记录成本消耗 | 成本可控 |
-
-### 2.4 模型性价比矩阵
+### 2.1 Skill定义
 
 ```
-┌─────────────────────────────────────────────────────────────────────────────┐
-│                          模型选择决策矩阵                                  │
-│                                                                             │
-│  任务类型                    推荐模型                    成本区间          │
-│  ─────────────────────────────────────────────────────────────────────────  │
-│                                                                             │
-│  简单任务                    DeepSeek Chat              ¥0.001/1K tokens    │
-│  (代码补全、简单文档)         Qwen Turbo                ¥0.001/1K tokens    │
-│                                                                             │
-│  中等任务                    Claude Sonnet 4            ¥0.003/1K tokens    │
-│  (常规开发、代码审查)         GPT-4o-mini               ¥0.0015/1K tokens  │
-│                                                                             │
-│  复杂任务                    Claude Sonnet 4            ¥0.003/1K tokens    │
-│  (架构设计、复杂逻辑)         GPT-4o                    ¥0.005/1K tokens    │
-│                                                                             │
-│  高要求任务                  Claude Sonnet 4            ¥0.003/1K tokens    │
-│  (代码质量、安全审查)         (优化后的Prompt效果更好)                       │
-│                                                                             │
-│  关键原则：                                                                  │
-│  ├─ 不是越贵越好，是最适合最好                                             │
-│  ├─ 优秀Skill可以让普通模型达到高端模型80%的效果                           │
-│  └─ 成本节约50-80%，质量损失<10%                                          │
-│                                                                             │
-└─────────────────────────────────────────────────────────────────────────────┘
+Skill是什么：
+├─ 是参与者的经验封装
+├─ 包含：Prompt模板、工作流程、质量标准
+├─ 可：复用、分享、集成到AI工具
+└─ 用于：项目各环节
+
+Skill不是什么：
+├─ 不是平台提供的服务
+├─ 不是调用API的封装
+└─ 不是限制参与者工具
 ```
 
-### 2.5 Prompt模板示例
+### 2.2 Skill核心组成
 
-**代码生成Prompt**：
-```yaml
-# 代码生成Prompt模板
-prompt_template: |
-  你是一位专业的{{language}}开发者，擅长编写高质量、可维护的代码。
-
-  # 任务信息
-  任务描述：{{task_description}}
-  技术栈：{{tech_stack}}
-  代码规范：{{coding_standards}}
-
-  # 质量要求
-  要求：
-  1. 代码必须符合{{coding_standards}}规范
-  2. 包含完整的错误处理和异常捕获
-  3. 编写单元测试，覆盖核心逻辑
-  4. 添加必要的注释说明
-  5. 考虑性能优化
-
-  # 输出格式
-  请按以下格式输出：
-  ## 代码
-  [完整的代码实现]
+```typescript
+interface Skill {
+  // 基础信息
+  id: string
+  name: string              // Skill名称
+  description: string       // 功能描述
+  author: User             // 作者
+  tags: string[]          // 标签：Python/React/API等
   
-  ## 说明
-  [代码设计思路和关键点]
+  // 核心组件
+  promptTemplates: PromptTemplate[]  // Prompt模板集合
+  workflow: Workflow                  // 工作流程定义
+  qualityStandard: QualityStandard  // 质量标准
   
-  ## 测试
-  [单元测试代码]
-
-  开始执行任务：
-  {{task_details}}
-```
-
-**代码审查Prompt**：
-```yaml
-# 代码审查Prompt模板
-review_template: |
-  你是一位资深代码审查专家，请对以下代码进行严格审查。
-
-  # 审查目标
-  代码内容：
-  {{code_content}}
-  语言：{{language}}
-  规范：{{coding_standards}}
-
-  # 审查维度
-  请从以下维度评分（1-5分）：
-  1. 安全性（SQL注入、XSS、密码处理等）
-  2. 性能优化
-  3. 代码规范
-  4. 逻辑正确性
-  5. 可读性
-
-  # 输出格式
-  ## 评分
-  安全性：X/5
-  性能：X/5
-  规范：X/5
-  逻辑：X/5
-  可读性：X/5
-  综合：X/5
-
-  ## 问题清单
-  - [严重] 问题描述...
-  - [警告] 问题描述...
-  - [建议] 问题描述...
-
-  ## 修改建议
-  针对每个问题，给出具体修改建议。
-```
-
-### 2.6 Skill使用流程
-
-```
-┌─────────────────────────────────────────────────────────────────────────────┐
-│                          Skill执行流程                                      │
-│                                                                             │
-│  参与者使用Skill执行任务                                                   │
-│      │                                                                     │
-│      ▼                                                                     │
-│  ┌─────────────────────────────────────────────────────────────────┐      │
-│  │  步骤1：任务分析                                                │      │
-│  │       - 输入任务描述                                            │      │
-│  │       - 系统分析任务复杂度                                      │      │
-│  │       - 推荐性价比模型                                          │      │
-│  └─────────────────────────────────────────────────────────────────┘      │
-│      │                                                                     │
-│      ▼                                                                     │
-│  ┌─────────────────────────────────────────────────────────────────┐      │
-│  │  步骤2：选择模型                                                │      │
-│  │       - 确认使用模型                                            │      │
-│  │       - 确认Prompt模板                                          │      │
-│  │       - 预估成本                                                │      │
-│  └─────────────────────────────────────────────────────────────────┘      │
-│      │                                                                     │
-│      ▼                                                                     │
-│  ┌─────────────────────────────────────────────────────────────────┐      │
-│  │  步骤3：执行AI                                                  │      │
-│  │       - 注入领域知识                                            │      │
-│  │       - 执行Prompt                                             │      │
-│  │       - 返回结果                                                │      │
-│  └─────────────────────────────────────────────────────────────────┘      │
-│      │                                                                     │
-│      ▼                                                                     │
-│  ┌─────────────────────────────────────────────────────────────────┐      │
-│  │  步骤4：人工审核 ⭐ (关键步骤)                                  │      │
-│  │       - 参与者检查AI输出                                        │      │
-│  │       - 发现问题→标记并反馈                                    │      │
-│  │       - 迭代优化直到达标                                        │      │
-│  └─────────────────────────────────────────────────────────────────┘      │
-│      │                                                                     │
-│      ▼                                                                     │
-│  ┌─────────────────────────────────────────────────────────────────┐      │
-│  │  步骤5：提交成果                                                │      │
-│  │       - 整理交付件                                              │      │
-│  │       - 提交到Git                                               │      │
-│  │       - 等待发起人验收                                          │      │
-│  └─────────────────────────────────────────────────────────────────┘      │
-│                                                                             │
-└─────────────────────────────────────────────────────────────────────────────┘
-```
-
-### 2.7 质量控制流程
-
-**质量控制是Skill的核心组成部分**：
-
-```
-人工审核检查清单：
-┌─────────────────────────────────────────────────────────────────────────────┐
-│                          人工审核要点                                      │
-│                                                                             │
-│  代码审核：                                                               │
-│  ├─ 功能完整性        □ 需求功能是否全部实现？                            │
-│  ├─ 代码规范性        □ 符合语言规范吗？(PEP8等)                         │
-│  ├─ 错误处理          □ 异常情况处理了吗？                               │
-│  ├─ 安全性            □ 有SQL注入/XSS等漏洞吗？                          │
-│  ├─ 性能              □ 有明显性能问题吗？                               │
-│  └─ 可测试性          □ 容易写单元测试吗？                               │
-│                                                                             │
-│  文档审核：                                                               │
-│  ├─ 完整性            □ 功能说明完整吗？                                 │
-│  ├─ 准确性            □ 描述正确吗？                                     │
-│  ├─ 可读性            □ 容易理解吗？                                     │
-│  └─ 格式规范          □ 格式统一吗？                                     │
-│                                                                             │
-│  迭代规则：                                                               │
-│  ├─ 问题<3个         → 直接修改                                         │
-│  ├─ 问题3-5个        → 反馈AI重做                                       │
-│  └─ 问题>5个         → 重新设计Prompt                                   │
-│                                                                             │
-└─────────────────────────────────────────────────────────────────────────────┘
-```
-
-### 2.8 Skill 配置
-
-```yaml
-# Skill 配置
-config:
-  # 模型策略
-  model_strategy:
-    type: enum
-    values: [auto, cost_first, quality_first, balanced]
-    default: auto
+  // 元数据
+  visibility: 'private' | 'community' | 'public'
+  license: string        // 开源许可证
   
-  # 模型配置
-  models:
-    anthropic:
-      enabled: true
-      default: claude-sonnet-4
-      cost_per_1k: 0.003
-    deepseek:
-      enabled: true
-      default: deepseek-chat
-      cost_per_1k: 0.001
-    qwen:
-      enabled: true
-      default: qwen-turbo
-      cost_per_1k: 0.001
-  
-  # API配置
-  api_key: 
-    type: string
-    description: API Key（加密存储）
-  
-  # Prompt模板（可自定义）
-  prompt_templates:
-    code_generation: ...
-    code_review: ...
-  
-  # 使用限制
-  limits:
-    max_cost_per_task: 1.0
-    max_cost_per_day: 50
+  // 统计
+  stats: {
+    usageCount: number      // 使用次数
+    successRate: number     // 验收通过率
+    avgQualityScore: number // 平均质量分
+  }
+}
 ```
 
----
+### 2.3 Skill使用方式
 
-## 三、参与者管理
+```
+参与者使用Skill的两种方式：
 
-### 3.1 参与者角色
+方式1：创建自己的Skill
+├─ 参与者创建Skill
+├─ 积累经验形成模板
+└─ 用于自己的项目
 
-**参与者定义**：使用Skill调用AI完成项目任务的协作者
+方式2：复用社区Skill
+├─ 查看社区Skill
+├─ 导入到本地
+└─ 用于自己的任务
 
-**参与者价值**：
-| 价值维度 | 说明 |
-|----------|------|
-| **技能组合** | 专长标签定义能做什么 |
-| **Skill质量** | 用Prompt/Workflow体现 |
-| **成本意识** | 会选择性价比方案 |
-| **质量把控** | 审核AI输出，确保持续达标 |
-
-### 3.2 专长标签
-
-```yaml
-标签类型:
-├─ 技术栈:
-│  ├─ 前端: React / Vue / Angular
-│  ├─ 后端: Python / Go / Node.js
-│  ├─ AI/ML: TensorFlow / PyTorch
-│  └─ 数据库: MySQL / PostgreSQL / MongoDB
-│
-├─ 专长领域:
-│  ├─ API设计
-│  ├─ 性能优化
-│  ├─ 安全加固
-│  ├─ 代码审查
-│  └─ 技术文档
-│
-├─ Skill等级:
-│  ├─ L1: 能用AI (基础Prompt)
-│  ├─ L2: 会调优Prompt
-│  ├─ L3: 有自定义模板
-│  └─ L4: 有完整Workflow
-│
-└─ 工具/平台:
-   ├─ Claude / GPT-4
-   ├─ DeepSeek / Qwen
-   └─ Docker / K8s
+方式3：集成到AI工具
+├─ 导出为MCP格式
+├─ 加载到Claude/Cursor
+└─ 在AI工具中使用
 ```
 
-### 3.3 Skill等级
+### 2.4 Skill示例
+
+```
+示例：Python RESTful API 开发Skill
+
+Skill结构：
+├─ 名称：Python RESTful API 开发专家
+├─ 标签：[Python, FastAPI, RESTful, API Design]
+├─ Prompt模板：
+│  ├─ 基础模板：通用API开发Prompt
+│  ├─ 数据库集成：SQLAlchemy集成模板
+│  ├─ 认证模块：JWT认证模板
+│  └─ 测试模板：pytest模板
+├─ 工作流程：
+│  ├─ 步骤1：分析API需求
+│  ├─ 步骤2：设计数据模型
+│  ├─ 步骤3：编写API代码
+│  └─ 步骤4：编写测试用例
+└─ 质量标准：
+   ├─ PEP8规范
+   ├─ 单元测试覆盖率 > 80%
+   ├─ 错误处理完整
+   └─ 文档齐全
+```
+
+### 2.5 Skill等级
 
 ```
 Skill等级定义：
@@ -406,52 +187,132 @@ Skill等级定义：
     └─ 有完整任务拆解+验证+迭代流程
 ```
 
-### 3.4 系统评分
+---
 
-```
-评分维度:
-├─ 完成率 = 完成任务数 / 承接任务数
-├─ 质量分 = 平均验收评分 (5分制)
-├─ 成本效益 = 预算使用率 / 质量评分
-├─ 响应分 = 平均响应时间评分
-└─ 协作分 = 同行/发起人评价
+## 三、参与者管理
 
-系统评分 = 完成率(30%) + 质量分(35%) + 成本效益(15%) + 响应分(10%) + 协作分(10%)
-```
+### 3.1 参与者角色
 
-### 3.5 个人档案
+**参与者定义**：使用Skill完成项目任务的协作者
+
+**参与者职责**：
+| 职责 | 说明 |
+|------|------|
+| **创建Skill** | 把经验封装为Skill |
+| **完成任务** | 用自己的工具+Skill完成交付 |
+| **分享Skill** | 分享到社区供他人复用 |
+| **获取收益** | 验收通过后获得分成 |
+
+### 3.2 个人档案
 
 ```
 档案展示:
 ├─ 专长标签
 ├─ Skill等级 (L1-L4)
+├─ 我的Skill列表
 ├─ 系统评分
-├─ 成本控制能力
-├─ 历史项目
-└─ 代表作品
+└─ 历史项目
+```
+
+### 3.3 系统评分
+
+```
+评分维度:
+├─ 完成率 = 完成任务数 / 承接任务数
+├─ 质量分 = 平均验收评分 (5分制)
+├─ 响应分 = 平均响应时间评分
+└─ 协作分 = 同行/发起人评价
+
+系统评分 = 完成率(40%) + 质量分(40%) + 响应分(10%) + 协作分(10%)
 ```
 
 ---
 
-## 四、发起人权限设计
+## 四、项目发布与管理
 
-### 4.1 权限概述
+### 4.1 发布项目
+
+```yaml
+项目:
+  title: 项目名称
+  description: 项目描述
+  mode: [社区/企业]
+  total_budget: 10000
+
+  # 环节拆解
+  milestones:
+    - name: 环节1名称
+      description: 环节描述
+      budget: 3000
+      skills: [Python, React]  # 需要的专长
+      quality_requirements:   # 质量要求
+        min_score: 4.0       # 最低质量评分
+        tests_required: true # 需要单元测试
+        review_required: true # 需要代码审查
+```
+
+### 4.2 任务认领
+
+```
+任务认领流程：
+    发起人发布任务
+          │
+          ▼
+    参与者查看任务大厅
+          │
+          ▼
+    参与者查看任务详情
+          │
+          ├── 评估验收标准
+          ├── 确认交付物
+          └── 决定是否认领
+          │
+          ▼
+    确认认领 → 开始交付
+```
+
+### 4.3 交付流程
+
+```
+参与者交付流程：
+┌─────────────────────────────────────────────────────────────────────────────┐
+│                      参与者交付流程                                     │
+│                                                                             │
+│  1. 从平台/CLI拉取任务                                               │
+│      │                                                                     │
+│      ▼                                                                     │
+│  2. 在AI工具中加载Skill（自己的/社区的）                            │
+│      │                                                                     │
+│      ▼                                                                     │
+│  3. 用Skill完成交付                                                   │
+│      │                                                                     │
+│      ▼                                                                     │
+│  4. 提交GitHub PR                                                     │
+│      │                                                                     │
+│      ▼                                                                     │
+│  5. 平台标记任务已提交                                               │
+│                                                                             │
+└─────────────────────────────────────────────────────────────────────────────┘
+```
+
+---
+
+## 五、发起人权限设计
+
+### 5.1 权限概述
 
 **核心原则**：付费者拥有知情权和验收权
 
 ```
 发起人权限：
 ├─ 执行中可见：
-│  ├─ 参与者使用的Skill模板（Prompt）
-│  ├─ 模型选择（Claude还是DeepSeek）
-│  ├─ AI调用记录（时间、Tokens、输入输出摘要）
-│  └─ 成本消耗实时统计
+│  ├─ 参与者使用的Skill（名称和作者）
+│  └─ 任务进度
 │
 ├─ 完成后可见：
-│  ├─ AI生成的所有内容（代码、文档）
-│  ├─ 人工审核记录（修改、优化）
-│  ├─ 质量验收评分
-│  └─ 成本消耗明细
+│  ├─ GitHub PR/仓库链接
+│  ├─ 交付物清单
+│  └─ 质量验收评分
 │
 └─ 验收权限：
    ├─ 通过 → 确认付款
@@ -459,16 +320,15 @@ Skill等级定义：
    └─ 争议 → 平台仲裁
 ```
 
-### 4.2 验收权限
+### 5.2 验收权限
 
 **发起人验收标准**：
 | 检查项 | 权重 | 说明 |
 |--------|------|------|
-| 功能完整性 | 30% | 需求功能是否完整实现 |
-| 代码质量 | 25% | 可读性、规范性、错误处理 |
+| 功能完整性 | 40% | 需求功能是否完整实现 |
+| 代码质量 | 30% | 可读性、规范性、错误处理 |
 | 测试覆盖 | 20% | 单元测试覆盖率 |
-| 文档质量 | 15% | 文档完整性 |
-| 成本效益 | 10% | 是否在预算内完成 |
+| 文档质量 | 10% | 文档完整性 |
 
 **验收操作**：
 | 操作 | 条件 | 结果 |
@@ -479,70 +339,58 @@ Skill等级定义：
 
 ---
 
-## 五、项目发布与管理
+## 六、分成与结算机制
 
-### 5.1 发布项目
+### 6.1 分成模式：阶段付费
 
-```yaml
-项目:
-  title: 项目名称
-  description: 项目描述
-  mode: [社区/企业]
-  total_budget: 10000
-
-  # 成本要求
-  cost_requirements:
-    max_cost_per_task: 0.5
-    preferred_models: [claude-sonnet-4, deepseek-chat]
-
-  # 环节拆解
-  milestones:
-    - name: 环节1名称
-      budget: 3000
-      skills: [Python, React]
-      skill_level: L2
-      cost_budget: 50
-      quality_requirements:
-        min_score: 4.0
-        tests_required: true
-        review_required: true
-```
-
-### 5.2 贡献度跟踪
+**核心原则**：验收后立即到账，按贡献比例分配
 
 ```
-参与者使用Skill执行任务
-         │
-         ▼
-    任务分析 → 选择模型 → 执行AI
-         │
-         ▼
-    人工审核 ⭐ (关键)
-         │
-         ▼
-    提交贡献 → 验收 → 分成
+分成流程：
+┌─────────────────────────────────────────────────────────────────────────────┐
+│                           阶段付费流程                                │
+│                                                                             │
+│  项目总预算                                                           │
+│      │                                                                     │
+│      ▼                                                                     │
+│  拆分为N个环节                                                       │
+│      │                                                                     │
+│      ▼                                                                     │
+│  参与者认领环节                                                      │
+│      │                                                                     │
+│      ▼                                                                     │
+│  参与者完成交付 → 提交GitHub PR                                      │
+│      │                                                                     │
+│      ▼                                                                     │
+│  发起人验收 ⭐                                                      │
+│      │                                                                     │
+│      ├── 验收通过 → 立即结算（验收后秒到账）                          │
+│      │                                                                     │
+│      └── 验收拒绝 → 需修改后重交                                      │
+│                                                                             │
+└─────────────────────────────────────────────────────────────────────────────┘
 ```
 
----
+### 6.2 分成计算
 
-## 六、成本管理
+**分成公式**：
+```
+参与者分成 = 环节预算 × 贡献比例
+```
 
-### 6.1 成本承担
+### 6.3 结算规则
 
-| 角色 | 成本 | 说明 |
-|------|------|------|
-| **参与者** | API调用费 | 自己承担 |
-| **发起人** | 项目预算 | 支付分成 |
-| **平台** | 0 | 不抽成 |
+**结算时间**：
+| 场景 | 结算时间 |
+|------|----------|
+| 验收通过 | 立即到账（秒级） |
+| 验收拒绝 | 修改后重新提交 |
 
-### 6.2 成本优化建议
-
-**系统自动建议**：
-| 建议类型 | 说明 |
-|----------|------|
-| **模型切换** | 简单任务建议用DeepSeek |
-| **Prompt优化** | 减少Token消耗 |
-| **任务拆解** | 大任务拆分成小任务 |
+**结算方式**：
+| 模式 | 结算方式 |
+|------|----------|
+| 社区模式 | 现金（支付宝/微信） |
+| 企业模式 | 积分 |
 
 ---
 
@@ -555,7 +403,7 @@ Skill等级定义：
 backup_participants:
   - user_id: user_002
     name: 王五
-    skills: [React]
+    skills: [React, TypeScript]
     state: online
 ```
 
@@ -569,169 +417,28 @@ backup_participants:
 
 ---
 
-## 八、场景设计（6个核心场景）
+## 八、开发计划
 
-### 场景一：参与者配置Skill
-### 场景二：使用Skill完成任务（含质量控制）
-### 场景三：发起人查看与验收
-### 场景四：成本管理与优化
-### 场景五：备份与结算
-### 场景六：反面教材（Skill用得烂）
-
----
-
-## 八、分成与结算机制
-
-### 8.1 分成模式：阶段付费
-
-**核心原则**：验收后立即到账，按贡献比例分配
-
-```
-分成流程：
-┌─────────────────────────────────────────────────────────────────────────────┐
-│                           阶段付费流程                                    │
-│                                                                             │
-│  项目总预算                                                               │
-│      │                                                                     │
-│      ▼                                                                     │
-│  拆分为N个环节                                                           │
-│      │                                                                     │
-│      ▼                                                                     │
-│  参与者认领环节                                                          │
-│      │                                                                     │
-│      ▼                                                                     │
-│  执行任务 → 质量控制 → 提交成果                                           │
-│      │                                                                     │
-│      ▼                                                                     │
-│  发起人验收 ⭐                                                          │
-│      │                                                                     │
-│      ├── 验收通过 → 立即结算（验收后秒到账）                              │
-│      │                                                                     │
-│      └── 验收拒绝 → 需修改后重交                                          │
-│                                                                             │
-└─────────────────────────────────────────────────────────────────────────────┘
-```
-
-### 8.2 分成计算
-
-**分成公式**：
-```
-参与者分成 = 环节预算 × 贡献比例
-
-示例：
-项目总预算：¥10,000
-环节1预算：¥3,000（30%）
-李四贡献比例：35%
-李四分成 = ¥3,000 × 35% = ¥1,050
-```
-
-**分成示例表**：
-```
-环节1（¥3,000）：
-├─ 李四：35% → ¥1,050
-├─ 王五：35% → ¥1,050
-└─ 赵六：30% → ¥900
-
-环节2（¥4,000）：
-├─ 王五：40% → ¥1,600
-└─ 周八：60% → ¥2,400
-
-环节3（¥3,000）：
-├─ 李四：50% → ¥1,500
-└─ 赵六：50% → ¥1,500
-
-总计：
-├─ 李四：¥1,050 + ¥1,500 = ¥2,550
-├─ 王五：¥1,050 + ¥1,600 = ¥2,650
-├─ 赵六：¥900 + ¥1,500 = ¥2,400
-└─ 周八：¥2,400
-```
-
-### 8.3 结算规则
-
-**结算时间**：
-| 场景 | 结算时间 |
-|------|----------|
-| 验收通过 | 立即到账（秒级） |
-| 验收拒绝 | 修改后重新提交，再次验收 |
-
-**结算方式**：
-| 模式 | 结算方式 |
-|------|----------|
-| 社区模式 | 现金（支付宝/微信） |
-| 企业模式 | 积分 |
-
-### 8.4 积分制（企业模式）
-
-**积分获取**：
-```
-参与者获得积分：
-├─ 完成环节 → 按贡献比例获得积分
-└─ 成本控制奖励 → 节省预算可获额外积分
-
-积分价值：
-├─ 1积分 = ¥1（固定价值）
-└─ 企业可自定义积分价值
-```
-
-**积分使用**：
-| 使用场景 | 说明 |
-|----------|------|
-| 兑换现金 | 1:1 兑换人民币 |
-| 兑换服务 | 兑换平台内的其他服务 |
-| 兑换商品 | 兑换实物商品（未来） |
-
-### 8.5 成本结算
-
-**成本承担**：
-| 角色 | 成本 | 结算方式 |
-|------|------|----------|
-| 参与者 | API调用费 | 自行承担，从分成中扣除 |
-| 发起人 | 项目预算 | 支付分成 |
-
-**示例**：
-```
-李四环节1分成：¥1,050
-李四API成本：¥0.099
-李四实际收入：¥1,050 - ¥0.099 = ¥1,049.901
-```
-
-### 8.6 争议处理
-
-**争议场景与处理**：
-| 场景 | 处理方式 |
-|------|----------|
-| 发起人拒绝验收 | 提供修改意见，参与者修改后重新提交 |
-| 参与者不服验收结果 | 发起申诉，平台仲裁 |
-| 成本争议 | 查看AI调用记录，核实实际消耗 |
-| 贡献度争议 | 查看Git提交记录，平台仲裁 |
-
----
-
-## 九、开发计划
-
-### 9.1 开发周期
+### 8.1 开发周期
 
 | 阶段 | 内容 | 时间 |
 |------|------|------|
 | **MVP** | 核心功能 | 4周 |
-| **v0.6** | Skill设计+性价比 | 2周 |
-| **v0.7** | 流程细化+反面案例 | 1周 |
+| **v0.7** | Skill设计+场景优化 | 1周 |
 | **v1.0** | 完整功能 | 2周 |
 
-### 9.2 MVP核心功能
+### 8.2 MVP核心功能
 
 | 功能 | 状态 | 说明 |
 |------|------|------|
 | 项目发布 | ✅ | 支持社区/企业模式 |
-| Skill调用 | ✅ | 支持多模型 |
-| 质量控制 | ✅ | 人工审核流程 |
-| 成本监控 | ✅ | Token/成本追踪 |
-| 发起人验收 | ✅ | 付费者权限 |
-| 备份机制 | ✅ | 放弃/接管 |
+| 任务大厅 | ✅ | 任务展示和认领 |
+| 发起人验收 | ✅ | 验收标准和结算 |
+| Skill管理 | ✅ | 创建、分享、复用 |
+| CLI客户端 | ⏳ | 任务同步、成果提交 |
 
 ---
 
 **文档版本**: v0.7
 **更新日期**: 2026-02-18
-**核心理念**：用更有性价比的模型，更优秀的Skill，达成项目要求
+**核心原则**：优秀的人的经验以Skill方式用于项目各环节
