fix: 清理历史版本并统一v0.7文档一致性
**删除历史版本**：
- requirements/: v0.1-v0.6 (保留v0.7)
- scenarios/: v0.1,v0.3-v0.6 (保留v0.7)

**架构文档_v0.7**：
- 新增2.5 CLI客户端设计（功能列表+工作流）
- 与原型、需求文档保持一致

**原型文档_v0.7**：
- 修复2.4验收管理页面（删除成本相关内容）
- 修复首页（删除"参与者自付AI费"）
- 修复任务大厅（删除"预计成本：参与者自付"）

**文档一致性检查**：
- Skill定义一致（经验封装：Prompt+Workflow+Quality）
- CLI功能一致（task/skill/project/review）
- 交付流程一致（拉取→用Skill→GitHub PR→提交）
- 验收流程一致（只看交付物，不看成本）

--- a/architecture/架构设计文档_v0.7.md
+++ b/architecture/架构设计文档_v0.7.md
@@ -200,6 +200,37 @@ Skill结构：
 | **CLI工具** | Node.js + Commander.js | - | TypeScript统一 |
 | **AI集成** | MCP Protocol | - | AI工具集成标准 |
 
+### 2.5 CLI客户端设计
+
+```
+CLI客户端功能：
+├─ 任务管理
+│  ├─ aipm task list              # 列出可认领任务
+│  ├─ aipm task claim <id>       # 认领任务
+│  ├─ aipm task pull             # 同步任务到本地
+│  └─ aipm task submit           # 提交成果
+│
+├─ Skill管理
+│  ├─ aipm skill list            # 列出我的Skill
+│  ├─ aipm skill create          # 创建Skill
+│  ├─ aipm skill export <id>     # 导出为MCP格式
+│  └─ aipm skill import <file>   # 导入Skill
+│
+├─ 项目管理
+│  ├─ aipm project list          # 列出我的项目
+│  └─ aipm project info <id>     # 项目详情
+│
+└─ 验收查询
+   ├─ aipm review status         # 查看验收状态
+   └─ aipm review result         # 查看验收结果
+
+CLI工作流：
+1. aipm task list                # 查看任务大厅
+2. aipm task pull <id>           # 拉取任务到本地
+3. 在AI工具中使用Skill完成交付    # Claude/Cursor/Codex
+4. aipm task submit               # 提交GitHub PR
+```
+
 ### 3.2 技术栈优势
 
 | 优势 | 说明 |
