--- a/prototype/原型设计文档_v0.7.md
+++ b/prototype/原型设计文档_v0.7.md
@@ -98,8 +98,8 @@ CLI客户端功能：
 │  │  🏢 发布项目         🤝 认领任务         ⚡ 用Skill完成          │   │
 │  │     发起你的项目         展示你的技能          经验驱动交付       │   │
 │  │                                                                    │   │
-│  │  💰 成本可控          📊 质量可控          🎯 成果验收           │   │
-│  │     参与者自付AI费        发起人验收把关        验收即结算       │   │
+│  │  💰 质量可控          🎯 成果验收           ⚡ Skill驱动          │
+│  │     发起人验收把关        验收即结算           经验复用高效        │
 │  │                                                                    │   │
 │  └─────────────────────────────────────────────────────────────────────┘      │
 │                                                                             │
@@ -202,18 +202,21 @@ CLI客户端功能：
 │                                                                             │
 │  ┌─ 待验收列表 ─────────────────────────────────────────────────────┐      │
 │  │                                                                    │   │
-│  │  📬 李四 提交了 环节1：后端API开发                               │   │
+│  │  📬 王五 提交了 环节1：用户认证API开发                          │   │
 │  │  ─────────────────────────────────────────                        │   │
-│  │  提交时间：10分钟前         预算：¥3,000         预估成本：¥0.10 │   │
+│  │  提交时间：10分钟前         预算：¥3,000                        │   │
+│  │                                                                    │   │
+│  │  使用Skill：Python RESTful API 开发专家（李四）                 │   │
 │  │                                                                    │   │
 │  │  交付件：                                                          │   │
-│  │  ├─ ✅ app.py (3.2KB)                                         │   │
-│  │  ├─ ✅ models.py (1.8KB)                                      │   │
-│  │  └─ ✅ test_auth.py (2.1KB)                                   │   │
+│  │  ├─ GitHub PR：https://github.com/.../pull/1                   │   │
+│  │  └─ 测试报告：覆盖率88%                                          │   │
 │  │                                                                    │   │
 │  │  质量评分：4.6/5.0                                               │   │
 │  │  ├─ 功能完整性：5/5                                             │   │
-│  │  └─ 成本控制：5/5                                               │   │
+│  │  ├─ 代码质量：4.5/5                                             │   │
+│  │  ├─ 测试覆盖：5/5                                               │   │
+│  │  └─ 文档质量：4/5                                               │   │
 │  │                                                                    │   │
 │  │  [查看成果]  [查看Skill]  [通过验收]  [拒绝]  [要求修改]      │   │
 │  │                                                                    │   │
@@ -237,7 +240,7 @@ CLI客户端功能：
 │  │     ─────────────────────────────────────────                      │   │
 │  │     预算：¥3,000                    预计分成：¥1,000-¥1,500     │   │
 │  │     专长要求：Python, 测试            Skill等级：L2+           │   │
-│  │     预计成本：参与者自付              截止时间：2026-02-25      │   │
+│  │     Skill等级：L2+           截止时间：2026-02-25      │   │
 │  │                                                                    │   │
 │  │  任务描述：编写单元测试，覆盖率要求85%以上...                  │   │
 │  │                                                                    │   │
